# hipfire

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  results.tsv
.skills/hipfire-diag/: fix-suggestions.md  interpret.md  run-diagnostics.sh
.skills/hipfire-kernel-tuning/: SKILL.md  case-studies.md  cross-arch.md  levers.md  playbook.md
.skills/hipfire-tester/: guide.md
cli/: index.ts
crates/engine/: Cargo.toml
crates/engine/examples/: a3b_smoke_forward.rs  bench_q8.rs  bench_qwen35_forward.rs  bench_qwen35_mq4.rs  bench_wide.rs  daemon.rs  debug_hfq.rs  debug_hfq2.rs  debug_qwen3.rs  dflash_spec_demo.rs  gemma4_smoke_forward.rs  greedy_dump.rs  greedy_dump_top5.rs  infer.rs  infer_hfq.rs  infer_vl.rs  logit_dump.rs  prefill_state_diff.rs  profile_host_vs_gpu.rs  profile_kernels.rs  profile_qwen35_mq4.rs  profile_turbo_attention.rs  rope_isolation.rs  run.rs  test_inference.rs  test_q4f16.rs  test_qwen35_load.rs  triattn_validate.rs
crates/engine/src/: dflash.rs  gemma4.rs  gemma4_vision.rs  hfq.rs  image.rs  lib.rs  llama.rs  qwen35.rs  speculative.rs  tokenizer.rs
crates/engine/tests/: channel_order.rs
crates/hipfire-quantize/: Cargo.toml
crates/redline/: PHASE3_NONGEMV.md
crates/redline/src/: lib.rs  (+1 more)
docs/: DFLASH_MONITOR_PROMPT.md  DFLASH_OVERNIGHT_AUTONOMY.md  DFLASH_OVERNIGHT_PROMPT.md  Q4_F16_SPEC.md
docs/methodology/: perf-benchmarking.md
findings/: phase1-research-synthesis.md
scripts/: bisect-test.sh  coherence-gate.sh  compile-kernels.sh  dflash-monitor.sh  install.ps1  install.sh  mi300_chain_runner.sh  quality-gate.sh
(+165 files in other folders)
